# luafcgid

./: Makefile.am  configure.ac
docs/: luafcgid-config.mkd
scripts/etc/: config.debian.lua  config.freebsd.lua
src/: Makefile.am  args.c  args.h  config.c  config.h  log.c  log.h  main.c  main.h  pool.c  request.c  str.h
